--- a/Копия index.html
+++ b/Копия index.html
@@ -29,13 +29,77 @@
     <link href="font-awesome-4.2.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 
-    <!--<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>-->
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
+    <script src="http://code.jquery.com/jquery-1.4.2.min.js"></script>
+    <!--<script type="text/javascript">
+        $(document).ready(function(){
+            $('#send_message').click(function(e){
+                e.preventDefault();
+                var error = false;
+                var topic = $('#topic').val();
+                var name = $('#name').val();
+                var email = $('#email').val();
+                var subject = $('#subject').val();
+                var message = $('#message').val();
+                if(topic.length == 0){
+                    var error = true;
+                    $('#topic_error').fadeIn(500);
+                } else {
+                    $('#topic_error').fadeOut(500);
+                }
+                if(name.length == 0){
+                    var error = true;
+                    $('#name_error').fadeIn(500);
+                } else {
+                    $('#name_error').fadeOut(500);
+                }
+                if(email.length == 0 || email.indexOf('@') == '-1'){
+                    var error = true;
+                    $('#email_error').fadeIn(500);
+                } else {
+                    $('#email_error').fadeOut(500);
+                }
+                if(subject.length == 0){
+                    var error = true;
+                    $('#subject_error').fadeIn(500);
+                } else {
+                    $('#subject_error').fadeOut(500);
+                }
+                if(message.length == 0){
+                    var error = true;
+                    $('#message_error').fadeIn(500);
+                } else {
+                    $('#message_error').fadeOut(500);
+                } if(error == false){
+                    $('#send_message').attr({'disabled' : 'true', 'value' : 'Sending...' });
+                    $.post("send_email.php", $("#contact_form").serialize(),function(result){
+                        if(result == 'sent'){
+                            $('#cf_submit_p').remove();
+                            $('#mail_success').fadeIn(500);
+                        } else {
+                            $('#mail_fail').fadeIn(500);
+                            $('#send_message').removeAttr('disabled').attr('value', 'Send Message');
+                        }
+                    });
+                }
+            });
+        });
+    </script>-->
 
     <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
         m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
         })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
         ga('create', 'UA-57990140-1', 'auto');
         ga('send', 'pageview');
     </script>
@@ -46,6 +110,7 @@
     <script>
     // You can also use "$(window).load(function() {"
         var j = jQuery.noConflict();
+
         j(document).ready(function () {
             j("#slider1").responsiveSlides({
                 maxwidth: 1500,
@@ -53,25 +118,29 @@
                 random: true    
             });
         });
-    </script>
+  </script>
 
-    <style>
-        .plan {
-            margin-left: auto;
-            margin-right: auto;
-            display: block;
-            width: 100%;
-        }
-        .linebreak {
-            margin-top: 20px;
-        }
-        .dis {
-            margin-right: auto;
-            margin-left: auto;
-            width: 200px;
-            height: 200px;
-        }
-    </style>
+  <style>
+    .plan {
+        margin-left: auto;
+        margin-right: auto;
+        display: block;
+        width: 100%;
+    }
+
+    .linebreak {
+        margin-top: 20px;
+    }
+
+    .dis {
+        margin-right: auto;
+        margin-left: auto;
+        width: 200px;
+        height: 200px;
+    }
+
+
+  </style>
 
 </head>
 
@@ -227,6 +296,39 @@
                     <a href="https://www.airbnb.ru/rooms/6280517" target="_blank"><img src="img/airbnb.png"/></a>
                     <a href="https://www.facebook.com/pages/La-Vida-Sin-Limites/1599616063656243" target="_blank"><img src="img/facebook.png" style="margin-left:10px;"/></a>
 
+                    <!--<form method="post" action="bookingtest.php">
+                        <div class="form-group">
+                        <label for="name">Имя</label>
+                        <input type="text" class="form-control" name="name" placeholder="Введите, пожалуйста, Ваше имя">
+                        </div>
+                        <div class="form-group">
+                        <label for="number">Номер телефона</label>
+                        <input type="tel" class="form-control" name="number" placeholder="Введите, пожалуйста, Ваш номер телефона">
+                        </div>
+                        <div class="form-group">
+                        <label for="email">Электронный адрес</label>
+                        <input type="email" class="form-control" name="email" placeholder="Введите, пожалуйста, Ваш электронный адрес">
+                        </div>
+                        <div class="form-inline">
+                        <div class="form-group">
+                        <label for="arrivaldate">День заезда</label>
+                        <input type="date" name="arrivaldate" style="width:130px;margin-left:3px;">
+                        </div>                           
+                        <div class="form-group">
+                        <label for="departuredate" style="margin-left:3px;">Дата отъезда</label>
+                        <input type="date" name="departuredate" style="width:130px;margin-left:3px;">                          
+                        </div>
+                        </div>
+                        <div class="form-inline" style="margin-top:15px; margin-bottom:10px;">
+                        <div class="form-group">
+                        <label for="guests">Количество гостей</label>
+                        <input type="number" class="form-control" name="guests" style="width:67px;margin-left:3px;"> 
+                        </div>
+                        </div>
+                        <button type="submit" name="book" id="book" class="btn btn-default">Забронировать</button>
+                    </form>-->
+
+
                 </div>
 
                 <div class="col-md-16">
@@ -238,9 +340,52 @@
                         <li><img src="img/4.JPG" alt=""></li>
                         <li><img src="img/5.JPG" alt=""></li>
                     </ul>-->
-                    <img class="plan" src="img/plan.png" alt="" />
+                    <!--<img class="plan" src="img/plan.png" alt="" />-->
                 </div>
+            </div>
 
+            <div class="row">
+                 <div class="col-md-16">
+                    <div id="myCarousel" class="carousel slide" data-interval="3000" data-ride="carousel">
+                        <!-- Carousel indicators -->
+                            <ol class="carousel-indicators">
+                                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                                <li data-target="#myCarousel" data-slide-to="1"></li>
+                                <li data-target="#myCarousel" data-slide-to="2"></li>
+                            </ol>   
+                        <!-- Wrapper for carousel items -->
+                        <div class="carousel-inner">
+                            <div class="item active">
+                                <img src="img/pics/test.jpg" alt="">
+                                <div class="carousel-caption">
+                                    <h3>First slide label</h3>
+                                    <p>Lorem ipsum dolor sit amet consectetur…</p>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <h2>Slide 2</h2>
+                                <div class="carousel-caption">
+                                    <h3>Second slide label</h3>
+                                    <p>Aliquam sit amet gravida nibh, facilisis gravida…</p>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <h2>Slide 3</h2>
+                                <div class="carousel-caption">
+                                    <h3>Third slide label</h3>
+                                    <p>Praesent commodo cursus magna vel…</p>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Carousel controls -->
+                        <a class="carousel-control left" href="#myCarousel" data-slide="prev">
+                        <span class="glyphicon glyphicon-chevron-left"></span>
+                        </a>
+                        <a class="carousel-control right" href="#myCarousel" data-slide="next">
+                        <span class="glyphicon glyphicon-chevron-right"></span>
+                        </a>
+                    </div>
+                </div>
             </div>
 
         </div>
