--- a/index2.html
+++ b/index2.html
@@ -29,13 +29,77 @@
     <link href="font-awesome-4.2.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 
-    <!--<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>-->
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
+    <script src="http://code.jquery.com/jquery-1.4.2.min.js"></script>
+    <!--<script type="text/javascript">
+        $(document).ready(function(){
+            $('#send_message').click(function(e){
+                e.preventDefault();
+                var error = false;
+                var topic = $('#topic').val();
+                var name = $('#name').val();
+                var email = $('#email').val();
+                var subject = $('#subject').val();
+                var message = $('#message').val();
+                if(topic.length == 0){
+                    var error = true;
+                    $('#topic_error').fadeIn(500);
+                } else {
+                    $('#topic_error').fadeOut(500);
+                }
+                if(name.length == 0){
+                    var error = true;
+                    $('#name_error').fadeIn(500);
+                } else {
+                    $('#name_error').fadeOut(500);
+                }
+                if(email.length == 0 || email.indexOf('@') == '-1'){
+                    var error = true;
+                    $('#email_error').fadeIn(500);
+                } else {
+                    $('#email_error').fadeOut(500);
+                }
+                if(subject.length == 0){
+                    var error = true;
+                    $('#subject_error').fadeIn(500);
+                } else {
+                    $('#subject_error').fadeOut(500);
+                }
+                if(message.length == 0){
+                    var error = true;
+                    $('#message_error').fadeIn(500);
+                } else {
+                    $('#message_error').fadeOut(500);
+                } if(error == false){
+                    $('#send_message').attr({'disabled' : 'true', 'value' : 'Sending...' });
+                    $.post("send_email.php", $("#contact_form").serialize(),function(result){
+                        if(result == 'sent'){
+                            $('#cf_submit_p').remove();
+                            $('#mail_success').fadeIn(500);
+                        } else {
+                            $('#mail_fail').fadeIn(500);
+                            $('#send_message').removeAttr('disabled').attr('value', 'Send Message');
+                        }
+                    });
+                }
+            });
+        });
+    </script>-->
 
     <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
         m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
         })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
         ga('create', 'UA-57990140-1', 'auto');
         ga('send', 'pageview');
     </script>
@@ -46,6 +110,7 @@
     <script>
     // You can also use "$(window).load(function() {"
         var j = jQuery.noConflict();
+
         j(document).ready(function () {
             j("#slider1").responsiveSlides({
                 maxwidth: 1500,
@@ -53,25 +118,29 @@
                 random: true    
             });
         });
-    </script>
+  </script>
 
-    <style>
-        .plan {
-            margin-left: auto;
-            margin-right: auto;
-            display: block;
-            width: 100%;
-        }
-        .linebreak {
-            margin-top: 20px;
-        }
-        .dis {
-            margin-right: auto;
-            margin-left: auto;
-            width: 200px;
-            height: 200px;
-        }
-    </style>
+  <style>
+    .plan {
+        margin-left: auto;
+        margin-right: auto;
+        display: block;
+        width: 100%;
+    }
+
+    .linebreak {
+        margin-top: 20px;
+    }
+
+    .dis {
+        margin-right: auto;
+        margin-left: auto;
+        width: 200px;
+        height: 200px;
+    }
+
+
+  </style>
 
 </head>
 
@@ -125,6 +194,22 @@
 
             </div>
             <!-- /.navbar-collapse -->
+
+            <div class="polyglot-language-switcher">
+            <ul style="display: none">
+            <li><a href="#" title="English (US)"  data-lang-id="en_US"><img src="images/flags/us.png" alt="United States"> English (US)</a></li>
+            <li><a href="#" title="French (France)" data-lang-id="fr_FR"><img src="images/flags/fr.png" alt="France"> Français (France)</a></li>
+            <li><a href="#" title="German" data-lang-id="de_DE"><img src="images/flags/de.png" alt="Germany"> Deutsch</a></li>
+            <li><a href="#" title="Spanish" data-lang-id="es_ES"><img src="images/flags/es.png" alt="Spain"> Español</a></li>
+            <li><a href="#" title="Italian" data-lang-id="it_IT"><img src="images/flags/it.png" alt="Italy"> Italiano</a></li>
+            <li><a href="#" title="Portuguese (Portugal)" data-lang-id="pt_PT"><img src="images/flags/pg.png" alt="Portugal"> Português (Portugal)</a></li>
+            <li><a href="#" title="Dutch" data-lang-id="nl_NL"><img src="images/flags/nl.png" alt="Netherlands"> Nederlands</a></li>
+            <li><a href="#" title="Greek" data-lang-id="gr_GR"><img src="images/flags/gr.png" alt="Greece"> Ελληνικά</a></li>
+            <li><a href="#" title="Japanese" data-lang-id="jp_JP"><img src="images/flags/jp.png" alt="Japan"> 日本語</a></li>
+            <li><a href="#" title="Simplified Chinese (China)" data-lang-id="cn_CN"><img src="images/flags/cn.png" alt="China"> 中文(简体)</a></li>
+            <li><a href="#" title="Hindi" data-lang-id="hi_IN"><img src="images/flags/in.png" alt="India"> हिन्दी</a></li>
+            </ul>
+            </div>
 
         </div>
         <!-- /.container -->
@@ -226,6 +311,39 @@
 
                     <a href="https://www.airbnb.ru/rooms/6280517" target="_blank"><img src="img/airbnb.png"/></a>
                     <a href="https://www.facebook.com/pages/La-Vida-Sin-Limites/1599616063656243" target="_blank"><img src="img/facebook.png" style="margin-left:10px;"/></a>
+
+                    <!--<form method="post" action="bookingtest.php">
+                        <div class="form-group">
+                        <label for="name">Имя</label>
+                        <input type="text" class="form-control" name="name" placeholder="Введите, пожалуйста, Ваше имя">
+                        </div>
+                        <div class="form-group">
+                        <label for="number">Номер телефона</label>
+                        <input type="tel" class="form-control" name="number" placeholder="Введите, пожалуйста, Ваш номер телефона">
+                        </div>
+                        <div class="form-group">
+                        <label for="email">Электронный адрес</label>
+                        <input type="email" class="form-control" name="email" placeholder="Введите, пожалуйста, Ваш электронный адрес">
+                        </div>
+                        <div class="form-inline">
+                        <div class="form-group">
+                        <label for="arrivaldate">День заезда</label>
+                        <input type="date" name="arrivaldate" style="width:130px;margin-left:3px;">
+                        </div>                           
+                        <div class="form-group">
+                        <label for="departuredate" style="margin-left:3px;">Дата отъезда</label>
+                        <input type="date" name="departuredate" style="width:130px;margin-left:3px;">                          
+                        </div>
+                        </div>
+                        <div class="form-inline" style="margin-top:15px; margin-bottom:10px;">
+                        <div class="form-group">
+                        <label for="guests">Количество гостей</label>
+                        <input type="number" class="form-control" name="guests" style="width:67px;margin-left:3px;"> 
+                        </div>
+                        </div>
+                        <button type="submit" name="book" id="book" class="btn btn-default">Забронировать</button>
+                    </form>-->
+
 
                 </div>
 
@@ -329,6 +447,12 @@
 
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
+
+    <script>
+        jQuery(document).ready(function ($) {
+            $('.polyglot-language-switcher').polyglotLanguageSwitcher();
+        });
+    </script>
 
 </body>
 
